# intro-fp-meetup

./: slides.html  slides.org
code/: code.cabal
code/src/: Console.hs  Imports.hs  Lib.hs
