name:                code
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/coacoas/intro-fp-meetup
license:             BSD3
license-file:        LICENSE
author:              BIll Carlson
maintainer:          bill@coacoas.net
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/code
